# html-fu

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/html_fu/: __init__.py  tags.py
